@@ -24,6 +24,9 @@
 
 ;;; Commentary:
 
+;; If you have bug reports and/or suggestions for improvement, please
+;; send them via <URL:http://mixi.jp/view_community.pl?id=1596390>.
+
 ;;; Code:
 
 (require 'mixi)
@@ -63,6 +66,11 @@ FUNCTION is the function for getting articles."
   "*If non-nil, get diaries or BBSes together with its comments."
   :group 'shimbun
   :type 'boolean)
+
+(defvar shimbun-mixi-x-face-alist
+  '(("default" . "X-Face: CY;j#FoBnpK^37`-IoJvN!J^u;GciiPmMQ@T)~RP1]t8iv?v)/bVI:I\"F!JfWJvhM5{zY!=
+ h.d+'g\I{D>Ocy?Rc4uYUyOZj2%2Kl>,x-!MCSsyi3!L}psrrC1jlF,O?Ui>qf)X;sBz`/}\066X%$
+ siG'|4K!2?==|oB&#E'5GGH\#z[muyQ")))
 
 (luna-define-method shimbun-groups ((shimbun shimbun-mixi))
   (mapcar 'car shimbun-mixi-group-alist))
